# ros2_sim_robot

./: .gitignore  readme.md
src/car_description/: CMakeLists.txt  package.xml
src/car_description/config/: car.yaml  car2.yaml  ros2_controlcli.sh
src/car_description/include/: driver.hpp  pugixml.hpp
src/car_description/launch/: car.sdf  car_description.launch.py  car_gazebo.launch.py
src/car_description/meshes/: bar.stl  button.stl  charge.stl  footbase.stl  fork.stl  frontwheel.stl  outface.stl  screen.stl  sun.stl
src/car_description/rviz/: rviz.rviz
src/car_description/src/: driver.cc  main.cc  pugixml.cc
src/car_description/urdf/: a.urdf  buggy3.urdf.xacro  car.urdf.xacro  car2.urdf.xacro
src/car_description/world/: empty.sdf
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: ForkMove.action
src/loam/: CMakeLists.txt  package.xml
src/loam/include/: common.hpp  feature_ext.hpp  imu_integrate.hpp  laser_mapping.hpp  occupacy_gridmap.hpp
src/loam/launch/: loam.py
src/loam/src/: common.cc  feature_ext.cc  laser_mapping.cc  occupacy_map.cc
src/loam/test/: feature_ext_test.cc  laser_odom_test.cc
src/move_ctrl/: CMakeLists.txt  package.xml
src/move_ctrl/include/: joy.hpp  move.hpp
src/move_ctrl/src/: move_node.cpp
src/ref_detect/: CMakeLists.txt  package.xml
src/ref_detect/config/: m.py  map_post.txt  t.txt
src/ref_detect/include/: detecter.hpp  extracion.hpp  mapping.hpp  match.hpp
src/ref_detect/launch/: ref.launch.py
src/ref_detect/src/: extraction.cc  main.cc  match.cc
src/ref_slam/: CMakeLists.txt  package.xml
src/ref_slam/config/: config.yaml  refmap.json
src/ref_slam/include/: common.hpp  fetaure_extractor.hpp  map_manager.hpp  map_optimization.hpp
src/ref_slam/launch/: ref_slam.launch.py
src/ref_slam/src/: common.cc  feature_extractor.cc  main.cc  map_manager.cc  map_optimization.cc
util/: resource_path_value.txt
